# evt

./: README.md  dev-requirements.txt  setup.cfg
docs/: conf.py  index.rst
docs/source/: block_maxima.rst  dataset.rst  estimator_abc.rst  gevmle.rst  gpdmle.rst  hill.rst  modules.rst  moment.rst  peaks_over_threshold.rst  utils.rst
src/evt/: dataset.py  utils.py
src/evt/_compiled_expressions/: compiled_expressions.py
src/evt/estimators/: estimator_abc.py  gevmle.py  gpdmle.py  hill.py  moment.py
src/evt/methods/: block_maxima.py  peaks_over_threshold.py
sympy/: create_compiled_expressions.py
tests/: test_block_maxima.py  test_dataset.py  test_gevmle_compiled_expressions.py  test_gevmle_estimator.py  test_gpdmle_estimator.py  test_hill_estimator.py  test_moment_estimator.py  test_peaks_over_threshold.py  test_utils.py
tutorial/: 0_the_dataset_object.ipynb  1_peaks_over_threshold.ipynb  2_block_maxima.ipynb  3_hill_estimator_and_the_estimate_object.ipynb  4_moment_estimator.ipynb  5_maximum_likelihood_generalized_pareto.ipynb  6_maximum_likelihood_generalized_extreme_value.ipynb
