[metadata]
name = evt
version = 0.0.2
author = Steven van Gemert
author_email = steven@vangemert.dev
description = Estimators and analysis for extreme value theory (EVT)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/spmvg/evt

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    matplotlib >=3.4
    numpy >=1.20
    pandas >=1.2
    scipy >=1.6

[options.packages.find]
where = src